// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="sc-AxjAm fJvtfB"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="sc-AxjAm WWlic"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="sc-AxjAm fJvtfB"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="sc-AxjAm gsnCJE"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="sc-AxjAm bHAIY"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="sc-AxjAm eemmWA"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="sc-AxjAm eemmWA"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="sc-AxjAm fWyUly"
  />
</div>
`;
